# Wordle

./: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
Data/: ArgumentsDataMessage.cpp  ArgumentsDataMessage.h  LettersPositionData.cpp  LettersPositionData.h
Logic/: ArgumentsHandleLogic.cpp  ArgumentsHandleLogic.h  RepresentationScheme.cpp  RepresentationScheme.h  WordDrawingLogic.cpp  WordDrawingLogic.h
View/: ArgumentsHandleView.cpp  ArgumentsHandleView.h  EndGameView.cpp  EndGameView.h  GameScreen.cpp  GameScreen.h  StartScreen.cpp  StartScreen.h
